fix broken test with new underscore.

--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,9 @@
   <title>Backbone Test Suite</title>
   <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen">
   <link rel="icon" href="../docs/images/favicon.ico">
-  <script src="vendor/jquery.js"></script>
-  <script src="vendor/qunit.js"></script>
+  <script src="../vendor/underscore/underscore.js"></script>
+  <script src="../vendor/jquery/jquery.js"></script>
+  <script src="../vendor/qunit/qunit/qunit.js"></script>
   <script src="../scoliosis.js"></script>
   <script src="environment.js"></script>
   <script src="noconflict.js"></script>
